c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/unclosed_subscript.c
int main(void) {
    int arr[] = {1, 2, 3};
    return arr[1;
}